assets/css/style.scss
---
---

@import 'jekyll-theme-cayman';

// Breakpoints
$large-breakpoint: 1024px !default;
$medium-breakpoint: 640px !default;

/* need this to get bullet point lists working in the body...*/
.main-content ul {
  list-style-type: disc !important;
  margin-left: 1.5em !important;
  padding-left: 0 !important;
}

.page-header {
  position: relative;
  display: flex;  /* Enable Flexbox */
  justify-content: center;  /* Align text in the gradient area */
  align-items: center; /* Align text itself*/
  text-align: center;
  

  /* Reset padding/margin */
  padding: 0;
  margin: 0;


  @include large {
  	height: 100px;
  	background-size: 100px auto, cover; 
  }

  @include medium {
  	height: 90px;
  	background-size: 90px auto, cover; 
  }

  @include small {
  	height: 80px;
  	background-size: 80px auto, cover; 
  }


  /* Combined background with image and gradient */
  background-image: 
    url('{{ site.header.image }}'),
    linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);   /* Custom image from _config.yml */
  
  background-position: left center, right center;  /* Image on the left, gradient on the right */
  background-repeat: no-repeat;
  
  color: white; /* Ensure text is visible over the background */


}

.title {
  margin: 0;
  margin-right: 10px;
  text-align: center;

  @include large {
  	width: calc(100vw - 100px);
  	margin-left: calc(100px + 10px); 
  	font-size: 3rem;
  }

  @include medium {
   	width: calc(100vw - 90px);
  	margin-left: calc(90px + 10px); 
    font-size: 2.7rem;
  }

  @include small {
  	width: calc(100vw - 80px);
  	margin-left: calc(80px + 10px); 
  	font-size: calc(1rem + 3vw);
  }

}

.green-text {
  color: #01a252;
}

.green-text a {
  color: #1e6bb8; /* Cayman default link color */
  text-decoration: underline;
}

/* Global reset for list styles */
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

/* Header and Navigation Bar Styling */
header {
  background-color: #333;
  color: white;
  padding: 5px 0;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 1000;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  width: 100%;
}

.nav-links {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;


  li {
    margin-right: 25px;

    a {
      color: white;
      text-decoration: none;
      font-size: 1.2em;

      &:hover {
        color: white;
        font-size: 1.2em;
        text-decoration: underline;
        background-color: #575757;

      }
    }
  }
} 

.nav-item {
  position: relative; /* Make sure submenu is positioned relative to parent */
}

.submenu {
  display: none;  /* Hide submenu by default */
  position: absolute;  /* Position submenu relative to parent */
  top: 100%;  /* Place it just below the parent menu */
  left: 0;
  background: #333;
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
  padding: 0.5rem 0;
  margin: 0;
  list-style: none;
  min-width: 20px;
  z-index: 10;
}

.has-submenu:hover > .submenu {
  display: block;  /* Show submenu on hover */
}

.submenu li a {
  display: block;
  padding: 0.5rem 1rem;
  color: white;
  text-decoration: none;
  font-size: 1em;
}

.submenu li a:hover {
  background-color: #575757;
  font-size: 1em;
}



/* Hamburger menu (hidden on desktop, visible on mobile) */
.hamburger-menu {
  display: none;
  cursor: pointer;
}

/* Mobile View: Hide navigation links and show hamburger menu */
@media screen and (max-width: #{$medium-breakpoint}) {


  /* Hide the normal nav menu on mobile */
  .nav-links {
    display: none;
    position: absolute;
    top: 25px;
    right: 4px;
    font-size: 1em;
    background-color: #333;
    border-radius: 8px;
    padding: 10px;
    width: 100%;
    flex-direction: column; /* Stack navigation items vertically */
    align-items: flex-start;
  }

  /* Show the hamburger menu on mobile */
  .hamburger-menu {
    display: block;
    height: 29px;
  }

  /* Show nav-links on hover of hamburger menu */
  .nav-links.active {
    display: flex;  /* Show the navigation menu when clicking the hamburger menu icon */
  }

}



/* Prevent content from hiding behind the fixed navbar */
body {
  padding-top: 39px; /* Adjust based on your navbar height */
}


.main-content {
  max-width: 100%;  /* Remove the width restriction */
  width: 100%;      /* Make the content box wider */
}


.site-footer {
  text-align: center;
}

